@@ -1,3 +1,10 @@
+Mon Sep 21 17:24:37 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * DevGuideExamples/DCPS/Messenger/Publisher.cpp:
+        * DevGuideExamples/DCPS/Messenger/Subscriber.cpp:
+
+          Updated include order (fixes issues on WinCE builds)
+
 Fri Sep 18 19:29:46 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * DevGuideExamples
